# swagger.json
@@ -1,8 +1,8 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "Online Course Api",
-    "description": "Teachers and Students Information",
+    "title": "Oline Course Api",
+    "description": "Students and Teachers Information",
     "version": "1.0.0"
   },
   "host": "lesson05-javier-espinoza.onrender.com",
@@ -23,13 +23,13 @@
       "get": {
         "tags":["Students"],
         "description": "",
-        "produces": [
-          "application/json"
-        ],
         "parameters": [],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
@@ -43,25 +43,10 @@
             "schema": {
               "type": "object",
               "properties": {
-                "firstName": {
-                  "example": "any"
-                },
-                "lastName": {
-                  "example": "any"
-                },
-                "age": {
-                  "example": "any"
-                },
                 "emailAddress": {
                   "example": "any"
                 },
-                "phoneNumber": {
-                  "example": "any"
-                },
-                "studentStatus": {
-                  "example": "any"
-                },
-                "emergencyName": {
+                "lastName": {
                   "example": "any"
                 }
               }
@@ -72,24 +57,22 @@
           "201": {
             "description": "Created"
           },
+          "400": {
+            "description": "Bad Request"
+          },
           "500": {
             "description": "Internal Server Error"
           }
         }
       }
     },
-    "/students/{id}": {
+    "/students/{emailAddress}": {
       "get": {
-        
         "tags":["Students"],
         "description": "",
-        
-        "produces": [
-          "application/json"
-        ],
         "parameters": [
           {
-            "name": "id",
+            "name": "emailAddress",
             "in": "path",
             "required": true,
             "type": "string"
@@ -98,73 +81,6 @@
         "responses": {
           "200": {
             "description": "OK"
-          }
-        }
-      },
-      "put": {
-        "tags":["Students"],
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "firstName": {
-                  "example": "any"
-                },
-                "lastName": {
-                  "example": "any"
-                },
-                "age": {
-                  "example": "any"
-                },
-                "emailAddress": {
-                  "example": "any"
-                },
-                "phoneNumber": {
-                  "example": "any"
-                },
-                "studentStatus": {
-                  "example": "any"
-                },
-                "emergencyName": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "204": {
-            "description": "No Content"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      },
-      "delete": {
-        "tags":["Students"],
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "204": {
-            "description": "No Content"
           },
           "500": {
             "description": "Internal Server Error"
@@ -176,13 +92,13 @@
       "get": {
         "tags":["Teachers"],
         "description": "",
-        "produces": [
-          "application/json"
-        ],
         "parameters": [],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
@@ -196,22 +112,10 @@
             "schema": {
               "type": "object",
               "properties": {
-                "firstName": {
-                  "example": "any"
-                },
-                "lastName": {
-                  "example": "any"
-                },
-                "age": {
-                  "example": "any"
-                },
                 "emailAddress": {
                   "example": "any"
                 },
-                "phoneNumber": {
-                  "example": "any"
-                },
-                "availability": {
+                "lastName": {
                   "example": "any"
                 }
               }
@@ -222,22 +126,22 @@
           "201": {
             "description": "Created"
           },
+          "400": {
+            "description": "Bad Request"
+          },
           "500": {
             "description": "Internal Server Error"
           }
         }
       }
     },
-    "/teachers/{id}": {
+    "/teachers/{emailAdress}": {
       "get": {
         "tags":["Teachers"],
         "description": "",
-        "produces": [
-          "application/json"
-        ],
         "parameters": [
           {
-            "name": "id",
+            "name": "emailAdress",
             "in": "path",
             "required": true,
             "type": "string"
@@ -246,70 +150,6 @@
         "responses": {
           "200": {
             "description": "OK"
-          }
-        }
-      },
-      "put": {
-        "tags":["Teachers"],
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "firstName": {
-                  "example": "any"
-                },
-                "lastName": {
-                  "example": "any"
-                },
-                "age": {
-                  "example": "any"
-                },
-                "emailAddress": {
-                  "example": "any"
-                },
-                "phoneNumber": {
-                  "example": "any"
-                },
-                "availability": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "204": {
-            "description": "No Content"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      },
-      "delete": {
-        "tags":["Teachers"],
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "204": {
-            "description": "No Content"
           },
           "500": {
             "description": "Internal Server Error"
